# decentralized-storage

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/api/: health.rs  upload.rs
src/models/: file_metadata.rs  mod.rs
src/routes/: health.rs
src/services/: upload.rs
