[package]
name = "decentralized-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
serde = { version = "1.0.219", features = ["derive"] }
blake3 = "1.8.2"
futures-util = "0.3.31"
